test/ddc-spec/error/01-ErrorExp/40-CaseNotAlgebraic/Test.ds

module Test

import foreign abstract type
 Foo : Data

where

-- ISSUE #410: Check for case on foreign abstract data.
f (x: Foo)
 = case x of
        y       -> 5
